<resources>
    <string name="app_name">VaccineKit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="loginbtn">Login</string>
    <string name="loginbutton">Login</string>

    <string name="appLogo">Vaccine Kit Logo</string>
    <string name="WordsRegister">Touch me to Register...</string>
    <string name="register">Register</string>

    <string name="VaccineKitMotto">Advancement of the Nation</string>
    <string name="vaccine_kit">Vaccine Kit</string>
    <string name="my_barcode">My Barcode</string>
    <string name="health_record">Health Record</string>
    <string name="lost_report">Lost Report</string>
    <string name="profil">Profil</string>
    <string name="logout">Logout</string>

    <string name="nik">NIK</string>
    <string name="name">Name</string>
    <string name="ttl">Birth Date</string>
    <string name="address">Address</string>
    <string name="date">Date</string>
    <string name="submit">Submit</string>
    <string name="photo">Photo</string>
    <string name="secondvaccine">Second Vaccine</string>
    <string name="firstvaccine">First Vaccine</string>
    <string name="selectionphoto">Selection Photo</string>
    <string name="statusvaccine">Status Vaccine</string>
    <string name="regisuser">User Registration</string>
    <string name="secondVaccine">Second Vaccine</string>
    <string name="vaccineinfo">Vaccine Info</string>
    <string name="havevaccine">Vaccine at:</string>
    <string name="insert_user_vaccine_profile">Insert User Vaccine Profile</string>
    <string name="fill_user_data_here">Fill user data here</string>
    <string name="birth_date">Birth Date</string>
    <string name="email">Email</string>
    <string name="show">show</string>
    <string name="scan_barcode">Scan Barcode</string>

</resources>